--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userGridViewPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_userGridViewPartial.cshtml
@@ -16,10 +16,12 @@
         userList.SettingsPager.LastPageButton.Visible = true;
         userList.SettingsPager.PageSizeItemSettings.Visible = true;
         userList.SettingsPager.PageSizeItemSettings.Items = new string[] { "10", "20", "50" };
+        
 
         userList.CommandColumn.Visible = true;
         userList.CommandColumn.ShowNewButtonInHeader = false;
         userList.CommandColumn.ShowEditButton = true;
+        userList.CommandColumn.ShowClearFilterButton = true;
 
         userList.KeyFieldName = "UserId";
 
