--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_pastPerformanceGrid.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/_pastPerformanceGrid.cshtml
@@ -8,6 +8,8 @@
         g.SettingsPager.AlwaysShowPager = true;
         g.SettingsPager.FirstPageButton.Visible = true;
         g.SettingsPager.LastPageButton.Visible = true;
+        g.SettingsBehavior.AllowFocusedRow = true;
+        g.SettingsBehavior.AllowSelectByRowClick = false;
 
         g.KeyFieldName = "Id";
 
@@ -114,8 +116,6 @@
 
             });
         });
-
-
 
     });
 }
