--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_ksRootLayout.cshtml
@@ -1,1 +1,119 @@
-﻿
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>
+        @ViewBag.Title
+    </title>
+    @Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.Editors },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.GridView }
+    )
+    <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet">
+    <link href="@Url.Content("~/Content/site.css")" rel="stylesheet">
+    <link rel="stylesheet" href="http://openlayers.org/en/v3.18.2/css/ol.css" type="text/css">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    @Html.DevExpress().GetScripts(
+        new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new Script { ExtensionSuite = ExtensionSuite.Editors },
+        new Script { ExtensionSuite = ExtensionSuite.GridView }
+    )
+    <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/site.js")" type="text/javascript"></script>
+</head>
+<body>
+    @if (Request.IsAuthenticated)
+    {
+        Html.DevExpress().Panel(p =>
+        {
+            p.Name = "topPanel";
+            p.FixedPosition = PanelFixedPosition.WindowTop;
+            p.Collapsible = true;
+            p.SettingsAdaptivity.CollapseAtWindowInnerWidth = 580;
+            p.ControlStyle.CssClass = "headerPane";
+            p.Styles.Panel.CssClass = "panel";
+            p.Styles.ExpandedPanel.CssClass = "expandedPanel";
+            p.Styles.ExpandBar.CssClass = "bar";
+            p.SetExpandBarTemplateContent(c =>
+            {
+                Html.RenderPartial("HeaderPartialView", HeaderViewRenderMode.Title);
+            });
+            p.SetContent(() =>
+            {
+                Html.RenderPartial("HeaderPartialView", HeaderViewRenderMode.Full);
+
+            });
+        }).GetHtml();
+        //Html.DevExpress().Panel(p =>
+        //{
+        //    p.Name = "leftPanel";
+        //    p.Collapsible = true;
+        //    p.SettingsAdaptivity.CollapseAtWindowInnerWidth = 580;
+        //    p.ControlStyle.BackColor = System.Drawing.Color.Blue;
+        //    p.FixedPosition = PanelFixedPosition.WindowLeft;
+        //    p.SetContent(() =>
+        //    {
+        //        ViewContext.Writer.Write("This should be the left menu");
+        //    });
+        //}).GetHtml();
+
+        Html.DevExpress().Panel(p =>
+        {
+            p.Name = "newPanelSelector";
+            p.ControlStyle.BackColor = System.Drawing.Color.Gray;
+            p.SetContent(() =>
+            {
+                ViewContext.Writer.Write("Possibly the menu?");
+                
+                Html.RenderAction("mainMenuButtons", "Home");
+            });
+        }).GetHtml();
+    }
+    @RenderBody()
+
+    @if (Request.IsAuthenticated)
+    {
+        Html.DevExpress().Panel(p =>
+        {
+            p.Name = "footerPanel";
+            p.FixedPosition = PanelFixedPosition.WindowBottom;
+            p.SetContent(() =>
+            {
+                ViewContext.Writer.Write("Is this footer in the right location?");
+            });
+        }).GetHtml();
+    }
+
+</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</html>
