--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0" />
     <title>@ViewBag.Title</title>
+    <script src="@Url.Content("~/Scripts/JSCustom.js")" type="text/javascript"></script>
 
 
-    
     @Html.DevExpress().GetStyleSheets(
-        new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme="KetoSavage" },
-        new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "KetoSavage"},
+        new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "KetoSavage" },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "KetoSavage" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.CardView, Theme = "KetoSavage" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.PivotGrid, Theme = "KetoSavage" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.VerticalGrid, Theme = "KetoSavage" },
@@ -21,10 +21,6 @@
         new StyleSheet { ExtensionSuite = ExtensionSuite.GridView, Theme = "KetoSavage" },
         new StyleSheet { ExtensionSuite = ExtensionSuite.Dashboard, Theme = "KetoSavage" }
     )
-
-    <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet">
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-
     @Html.DevExpress().GetScripts(
         new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
         new Script { ExtensionSuite = ExtensionSuite.Editors },
@@ -38,89 +34,16 @@
         new Script { ExtensionSuite = ExtensionSuite.GridView },
         new Script { ExtensionSuite = ExtensionSuite.Dashboard }
     )
-    <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/site.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/JSCustom.js")" type="text/javascript"></script>
+    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div class="wrapper">
     @if (Request.IsAuthenticated)
-    {
-
-        <header>
-            <div class="container">
-                @Html.DevExpress().Panel(p =>
-           {
-               p.Name = "TopPanel";
-               p.Width = Unit.Percentage(100);
-               p.Collapsible = true;
-               p.SettingsAdaptivity.CollapseAtWindowInnerWidth = 680;
-               p.SettingsCollapsing.ExpandButton.GlyphType = PanelExpandButtonGlyphType.Strips;
-               p.Styles.ExpandBar.CssClass = "expandBar";
-               p.Styles.ExpandedPanel.CssClass = "expandedPanel";
-
-               p.SetExpandBarTemplateContent(c =>
-               {
-                   ViewContext.Writer.Write("<div class='title'><a href='" + Url.Action("Home", "Pages") + "'Test</a><p class'small'>Mobile friendly</p></div>");
-               });
-               p.SetContent(() => { Html.RenderPartial("HeaderPanelContentPartial"); });
-           }).GetHtml()
-            </div>
-        </header>
-
-    }
-    <div class="content">
-        @RenderBody();
-    </div>
-    @if (Request.IsAuthenticated)
-    {
-    <div id="btnBackToTop" class="btnBackToTop hidden">
-        <i class="glyphicon glyphicon-circle-arrow-up"></i>
-    </div>
-    <footer>
-        <div class="footerUp">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <h4>DevExpress</h4>
-                        <p>DevExpress engineers feature-complete Presentation Controls, IDE Productivity Tools, Business Application Frameworks, and Reporting Systems for Visual Studio.</p>
-                    </div>
-                    <div class="col-md-offset-1 col-md-4">
-                        <h4>Latest Posts</h4>
-                        <ul class="list-unstyled latestPosts">
-                            <li><a href="#">Upcoming webinar: Give AdHoc Query Powers to Your ASP.NET Grid Users</a></li>
-                            <li><a href="#">HTML5 Chart and Data Visualization Widgets - Enhancements</a></li>
-                            <li><a href="#">HTML5 Form Layout Widget</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-offset-1 col-md-3">
-                        <h4>Contact Us</h4>
-                        <ul class="list-unstyled">
-                            <li>505 N. Brand Blvd</li>
-                            <li>Glendale CA 91203 USA</li>
-                            <li>Phone: + 1 (818) 844 3383</li>
-                            <li>Mail: <a href="#">clientservices@devexpress.com</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footerDown">
-            <div class="container">
-                <p>@DateTime.Today.Year.ToString() &copy; All Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
-            </div>
-        </div>
-    </footer>
-    }
-    </div>
-
-    @*@if (Request.IsAuthenticated)
     {
         Html.DevExpress().Panel(settings =>
         {
             settings.Name = "HeaderPane";
             settings.FixedPosition = PanelFixedPosition.WindowTop;
-            settings.Collapsible = true;
+            settings.Collapsible = false;
             settings.SettingsAdaptivity.CollapseAtWindowInnerWidth = 500;
             settings.ControlStyle.CssClass = "headerPane";
             settings.Styles.Panel.CssClass = "panel";
@@ -136,7 +59,25 @@
             });
         }).GetHtml();
 
+        //Html.DevExpress().Panel(settings =>
+        //{
+        //    settings.Name = "LeftPanel";
+        //    settings.ClientVisible = true;
+        //    settings.FixedPosition = PanelFixedPosition.WindowLeft;
+        //    settings.Collapsible = false;
+        //    settings.ControlStyle.CssClass = "leftPanel";
+        //}).GetHtml();
 
+        //Html.DevExpress().Panel(settings =>
+        //{
+        //    settings.Name = "MenuPanel";
+        //    settings.EnableClientSideAPI = true;
+        //    settings.Styles.Panel.CssClass = "panel";
+        //    settings.SetContent(() =>
+        //    {
+        //        Html.RenderPartial("_menuPartial");
+        //    });
+        //}).GetHtml();
     }
 
     <script type="text/javascript">
@@ -170,7 +111,7 @@
         {
             Html.RenderPartial("FooterPartialView");
         });
-    }).GetHtml()*@
+    }).GetHtml()
 
 </body>
 
